Add Mask Info activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,5 +43,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".UploadActivity" android:exported="false" />
+        <activity android:name=".MaskActivity" android:exported="false" />
     </application>
 </manifest>
