--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
                 android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.CamMask">
             <intent-filter>
@@ -42,7 +42,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UploadActivity" android:exported="false" />
-        <activity android:name=".MaskActivity" android:exported="false" />
+        <activity android:name=".activities.UploadActivity" android:exported="false" />
+        <activity android:name=".activities.MaskActivity" android:exported="false" />
     </application>
 </manifest>
